Terminando administracion de hoteles y programas

--- a/views/sistema/carro.phtml
+++ b/views/sistema/carro.phtml
@@ -2,6 +2,11 @@
 <div id="page-content">
     <div id='wrap'>
         <div id="page-heading">
+            <ol class="breadcrumb">
+                <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                <li class="active">Carro de compras</li>
+            </ol>
+            
             <h1>Carro de compras</h1>
         </div>
 		
@@ -145,18 +150,18 @@
                                                     <tbody>
                                                         <tr>
                                                             <th>Adulto 1</th>
-                                                            <td><input type="text" class="form-control" id="Carr_txtNombrePas_1" name="Carr_txtNombrePas_1" value="<?php echo $mL_ini; ?>"></td>
-                                                            <td><input type="text" class="form-control" id="Carr_txtApellidoPas_1" name="Carr_txtApellidoPas_1" value="<?php echo $mL_ini; ?>"></td>
+                                                            <td><input type="text" class="form-control" id="Carr_txtNombrePas_1" name="Carr_txtNombrePas_1" value="<?php if(isset($mL_ini)){ echo $mL_ini; } ?>"></td>
+                                                            <td><input type="text" class="form-control" id="Carr_txtApellidoPas_1" name="Carr_txtApellidoPas_1" value="<?php if(isset($mL_ini)){ echo $mL_ini; } ?>"></td>
                                                         </tr>
                                                         <tr>
                                                             <th>Adulto 1</th>
-                                                            <td><input type="text" class="form-control" id="Carr_txtNombrePas_1" name="Carr_txtNombrePas_1" value="<?php echo $mL_ini; ?>"></td>
-                                                            <td><input type="text" class="form-control" id="Carr_txtApellidoPas_1" name="Carr_txtApellidoPas_1" value="<?php echo $mL_ini; ?>"></td>
+                                                            <td><input type="text" class="form-control" id="Carr_txtNombrePas_1" name="Carr_txtNombrePas_1" value="<?php if(isset($mL_ini)){ echo $mL_ini; } ?>"></td>
+                                                            <td><input type="text" class="form-control" id="Carr_txtApellidoPas_1" name="Carr_txtApellidoPas_1" value="<?php if(isset($mL_ini)){ echo $mL_ini; } ?>"></td>
                                                         </tr>
                                                         <tr>
                                                             <th>Adulto 1</th>
-                                                            <td><input type="text" class="form-control" id="Carr_txtNombrePas_1" name="Carr_txtNombrePas_1" value="<?php echo $mL_ini; ?>"></td>
-                                                            <td><input type="text" class="form-control" id="Carr_txtApellidoPas_1" name="Carr_txtApellidoPas_1" value="<?php echo $mL_ini; ?>"></td>
+                                                            <td><input type="text" class="form-control" id="Carr_txtNombrePas_1" name="Carr_txtNombrePas_1" value="<?php if(isset($mL_ini)){ echo $mL_ini; } ?>"></td>
+                                                            <td><input type="text" class="form-control" id="Carr_txtApellidoPas_1" name="Carr_txtApellidoPas_1" value="<?php if(isset($mL_ini)){ echo $mL_ini; } ?>"></td>
                                                         </tr>
                                                     </tbody>
                                                 </table>
@@ -184,10 +189,10 @@
                                         <fieldset title="Paso 3">
                                             <legend>SOLICITUD DE RESERVA</legend>
                                             <div class="row">
-                                                    <label class="col-md-3 control-label">Lorem Ipsum</label>
+                                                    <label class="col-md-3 control-label">Comenzando</label>
                                                     <div class="col-md-9">
-                                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, quis autem deleniti animi eum a eaque sint voluptatibus labore possimus accusantium molestias magnam cum officiis qui neque minima assumenda facere aut repellat delectus. Soluta incidunt pariatur natus voluptatum voluptatibus culpa blanditiis. Inventore, repellendus, at veniam magnam quisquam necessitatibus modi est qui deserunt. Dicta, excepturi, iusto, maiores perferendis rem officiis est voluptas possimus laudantium fugit veritatis!</p>
-                                                            <p>By clicking Finish you agree that you accept the Terms &amp; Conditions</p>
+                                                            <p>Comenzando a finalizar la solicitud de reserva</p>
+                                                            <p>Comenzando a finalizar la solicitud de reserva</p>
                                                     </div>
                                             </div>
                                             
