--- a/views/sistema/adminProgramas.phtml
+++ b/views/sistema/adminProgramas.phtml
@@ -36,24 +36,25 @@
                                         Debe ingresar una <b>Ciudad</b> para buscar.
                                         <button type="button" class="close" onClick="muestraOculta('divAlertWar', '2')">&times;</button>
                                     </div>
-                                    <form method="post" id="frmAdmProg" action="process/procesoAdmProgramas.php">
+                                    <form method="post" id="frmAdmProg" action="<?php echo BASE_URL ?>process/admProgramas">
                                     <table align="left" cellspacing="5" cellpadding="5">
                                         <tr>
- 	                                       <td>Ciudad:</td>
+                                            <td>Ciudad:</td>
                                            <td>
                                            		<!-- <input type="text" id="txtCiudad-AdmProg" name="txtCiudad-AdmProg" style="width:200px" placeholder="Ingrese ciudad de destino" onkeyup="buscarCiudad(this.value, 'frmAdmProg', 'spnCiudad-prog', 'txtCiudad-AdmProg');" autocomplete="off">
                                                         <span id="spnCiudad-prog" class="twitter-typeahead" style="position: relative; display: none; direction: ltr;"></span> -->
                                                 <select name="aP_txtCiudadDestino_P" id="aP_txtCiudadDestino_P" class="form-control" >
                                                 <option value="0">Seleccione destino</option>
                                                     <?php
-                                                    if($this->getCiudadesPRG!=FALSE)
+                                                    if($this->objCiudadesPRG)
                                                     { 
-                                                        foreach($this->getCiudadesPRG as $columCiudadesPRG)
+                                                        foreach($this->objCiudadesPRG as $columCiudadesPRG)
                                                         {
-                                                            $aP_codigoCiuPRG= trim($columCiudadesPRG['codigo_ciudad']);
-                                                            $aP_nombreCiuPRG= trim($columCiudadesPRG['nombre_ciudad']);
+                                                        
+                                                            $aP_codigoCiuPRG= trim($columCiudadesPRG->getCodCiudad());
+                                                            $aP_nombreCiuPRG= trim($columCiudadesPRG->getCiudad());
                                                             $aP_nombreCiudadPRG = $aP_nombreCiuPRG." (".$aP_codigoCiuPRG.")";
-
+                                                            
                                                             if(Session::get('sess_pC_aP_ciudad')==$aP_nombreCiuPRG)
                                                             {
                                                             ?>
@@ -71,9 +72,12 @@
                                                     ?>
                                                 </select>
                                            </td>
+
+                                           
+                                               
                                            <td>&nbsp;&nbsp;&nbsp;
                                                 <input type="button"  id="btnAdmProg" class="btn btn-primary" value="Buscar programa">
-                                                <img id="imgLoading" src="iconos/loading.gif" style="display:none" width="32" border="0" />
+                                                <img id="imgLoading" src="<?php echo $_layoutParams['ruta_img']; ?>loading.gif" style="display:none" width="32" border="0" />
                                            </td>
                                         </tr>
                                     </table>
@@ -93,7 +97,7 @@
                     
                     
                     <?php
-                    if(isset($_SESSION["sess_pAP_ciudad"]))
+                    if(isset($_SESSION["sess_pC_aP_ciudad"]))//sess_pAP_ciudad
 					{
 					?>
                      <script>				
@@ -107,23 +111,6 @@
 									});
 					</script>
                     
-                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                    <h4 class="modal-title" id="tituloForm">Cargar PDF</h4>
-                                </div>
-                                
-                                <div class="modal-body" id="AP_divPopup"></div>
-                                
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-                                </div>
-                            </div><!-- /.modal-content -->
-                        </div><!-- /.modal-dialog -->
-                    </div><!-- /.modal -->
                     
                     
                     <div class="panel panel-sky" id="contenedorBusqueda" style="display:none">
@@ -137,22 +124,24 @@
                                         <th>Codigo</th>
                                         <th>Nombre</th>
                                         <th>Ciudad</th>
-                                        <th width="100"></th>
+                                        <th width="100">Subir PDF</th>
+                                        <th width="100">Ver PDF</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                 	
                                     <?php
 									//echo $_SESSION["sess_pAP_ciudad"];
-                                    $var_getProgAdmin=false; // $privateFunctions->getProgramasAdmin($_SESSION["sess_pAP_ciudad"]);
-									if($var_getProgAdmin!=FALSE)
+                                    //$var_getProgAdmin=false; // $privateFunctions->getProgramasAdmin($_SESSION["sess_pAP_ciudad"]);
+									if($this->objProgramas)
 									{ 
-										foreach($var_getProgAdmin as $columProgAdm)
+										foreach($this->objProgramas as $columProgAdm)
 										{
-											$aP_codigoProg= mb_convert_encoding(trim($columProgAdm['codigo']), "UTF-8", "ISO-8859-1");
-											$aP_nombreProg= mb_convert_encoding(trim($columProgAdm['nombre']), "UTF-8", "ISO-8859-1");
-											$aP_ciudadProg= mb_convert_encoding(trim($columProgAdm['nombreC']), "UTF-8", "ISO-8859-1");
-											
+											$aP_codigoProg= mb_convert_encoding(trim($columProgAdm->getCodigo()), "UTF-8", "ISO-8859-1");
+											$aP_nombreProg= mb_convert_encoding(trim($columProgAdm->getNombre()), "UTF-8", "ISO-8859-1");
+											$aP_ciudadProg= mb_convert_encoding(trim($columProgAdm->getCiudad()), "UTF-8", "ISO-8859-1");
+											//Session::set('sess_cod_prog',$aP_codigoProg);
+                                                                                        /*
 											$aP_documento= trim($columProgAdm['ruta_pdf']);
 											
 											if(strpos($aP_documento, '.pdf') !== FALSE)
@@ -163,16 +152,44 @@
 											{
 												$aP_icono='word';
 											}
+                                                                                         */ 
+                                                                                         
 									?>
                                        <tr class="odd gradeX">
                                            <td><?php echo $aP_codigoProg; ?></td>
                                            <td><?php echo $aP_nombreProg; ?></td>
                                            <td><?php echo $aP_ciudadProg; ?></td>
                                            <td align="center">
-                                           <a data-toggle="modal" href="#myModal" onClick="abrePopup('editProgramas.php', '<?php echo $aP_codigoProg; ?>');">
-                                           <img src="iconos/conf.png" width="24" />
-                                           </a>
+                                           <a data-toggle="modal" href="#myModal" onClick="abrePopupPrograma('<?php echo BASE_URL ?>sistema/subirPdf', 'Subir Pdf', '<?php echo $aP_codigoProg; ?>');">
+                                           <img src="<?php echo $_layoutParams['ruta_img']; ?>edit.png" width="24" border="0" />
+                                           </a></td>
+                                           <?php
+                                           $texto_cambiado = str_replace(" ", "_",$aP_codigoProg);  
+                                           $nomArchivo = ROOT. DS .'public'. DS .'pdf'. DS .'upl_'.$texto_cambiado.'.pdf';
+                                           
+                                           if (file_exists($nomArchivo)) 
+                                           {  
+                                              
+                                           ?>
+                                           
+                                           <td align="center">
+                                           <a data-toggle="modal" href="#myModal" onClick="abrePopupPrograma('<?php echo BASE_URL ?>sistema/verPDF', 'Ver Pdf', '<?php echo $aP_codigoProg; ?>');">
+                                           <img src="<?php echo $_layoutParams['ruta_img']; ?>pdf.png" width="24" border="0" />
+                                           </a></td>
+                                           <?php
+                                           
+                                           }  
+                                            else{
+                                                
+                                            ?> 
+                                           <td align="center">
+                                                
                                            </td>
+                                            <?php     
+                                            } 
+                                           ?>
+                                               
+                                           
                                        </tr>
                                    <?php }
 									}
@@ -214,3 +231,62 @@
 		</div> <!-- container -->
 	</div> <!--wrap -->
 </div> <!-- page-content -->
+<script>
+
+
+
+$('#btnAdmProg').on('click',function()
+{
+    $("#btnAdmProg").attr('disabled', 'disabled');
+    if($('#aP_txtCiudadDestino_P').val()==0)
+    {
+        $('#divAlertWarHot').fadeIn( 1500 );
+        $('#divAlertWarHoy').animate({
+                'display': 'block'
+        });
+        
+        $("#btnAdmProg").delay(2000).queue(function(dis)
+        {
+            $("#btnAdmProg").removeAttr("disabled");
+            dis();
+        });
+    }
+    else
+    {
+        $(document).skylo('start');
+
+        setTimeout(function(){
+                $(document).skylo('set',50);
+        },1000);
+
+        setTimeout(function(){
+                $(document).skylo('end');
+        },1500);
+        setTimeout(function(){
+                document.getElementById('frmAdmProg').submit();
+        },2500);
+        
+        $("#btnAdmProg").delay(5000).queue(function(dis)
+        {
+            $("#btnAdmProg").removeAttr("disabled");
+            dis();
+        });
+    }
+    
+});
+
+
+function abrePopupPrograma(docPHP, titulo, codProg)
+{
+    $("#ML_divPopup").html('');
+    $("#ML_tituloForm").html(titulo);
+    $.post(docPHP, 
+    {
+        post_open: 'on',
+        post_codProg: codProg
+    }, function(data)
+    {
+        $("#ML_divPopup").html(data);
+    });
+}
+</script>
