--- a/views/sistema/imagenes.phtml
+++ b/views/sistema/imagenes.phtml
@@ -32,7 +32,7 @@
                                         <select name="cmbCategoria_lVA" id="cmbCategoria_lVA" style="width:400px" onchange="procesoCargaDiv(this.value, 'lVA_divDetalle', 'detalleLogoVoucherAgen.php')">
                                             <option value="0">Seleccione una agencia</option>
                                            <?php
-                                            $var_getAgen= false; //$privateFunctions->getAgencias();
+                                            //$var_getAgen= false; //$privateFunctions->getAgencias();
                                             if($var_getAgen!=FALSE)
                                             {
                                                 foreach($var_getAgen as $columGetAgen)
