--- a/views/sistema/index.phtml
+++ b/views/sistema/index.phtml
@@ -1,7 +1,7 @@
 <div id="page-content">
 	<div id='wrap'>
 		<div id="page-heading">
-                    <h1>Bienvenido al sistema <?php echo Session::get('sess_nombre'); ?></h1>
+                    <h1>Bienvenido al sistema <?php //echo Session::get('sess_nombre'); ?></h1>
 		</div>
             
                 <div class="container">
