Mensaje de exito en editarHotel

--- a/views/sistema/centerBox/editHotel.phtml
+++ b/views/sistema/centerBox/editHotel.phtml
@@ -491,7 +491,7 @@
                  noExito();
                  }
                  else{
-                    $("#divPopupH").html('<div class="alert alert-dismissable alert-success"><strong>Terminado</strong><br/><img src="<?php echo $_layoutParams['ruta_img'];?>ok.png" width="32" border="0" /> Proceso realizado con &eacute;xito.</div>'); 
+                    $("#ML_divPopup").html('<div class="alert alert-dismissable alert-success"><strong>Terminado</strong><br/><img src="<?php echo $_layoutParams['ruta_img'];?>ok.png" width="32" border="0" /> Proceso realizado con &eacute;xito.</div>'); 
                     //exito();    
                  }
              }
